--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
+    "ipaddr.js": "1.3.0",
     "mongoose":"4.9.6"
   }
 }
